2025-09-25

- Fixed script aborting when previous theme file no longer exists
- Improved moving focus by mouse button 1 click away from text input fields
- Added new internal render themes "DARK" and "INDIGO"
  (server version >= 0.26.1.0)

2025-08-27

- Speed up console output
- Hidden console window no longer reduces performance
- For performance reasons, console output window
  can now be disabled during console output generation
  and enabled again later to view cumulative output

2025-08-22

- Modified console again
  to prevent from potential core dump on Linux

2025-08-20

- Modified console output to avoid console potentially
  freezing and becoming unresponsable to keyboard/mouse
  due to being flooded
- Added scrollbar if list of server tasks is longer than 5 tasks

2025-06-14

- Made DEFAULT render theme first theme in list of available render themes
- Up/Down key and mouse wheel in server task entry field
  now allows scrolling through available tasks
- Added support for Marlin-renderer for JDK17+

2025-04-29

- Removed no longer existing internal render theme "MOTORIDER_DARK",
  added new internal render theme "BIKER" instead
  (server version >= 0.25.0.0)

2025-04-28

- Fixed: Spaces in temporary folder path resulted in error message
  "[SRV] Error: Could not find or load main class ...log4j.properties"

2025-03-05

- (Re-)allowed positioning insert cursor in text input fields
- Selection in file selection window was not highlighted (Linux only!)
- Removed ability to disable the output console completely
- Suppressed meaningless SLF4J information output
- Removed work around to remove remaining temporary Tcl folder
  as Tcl bug was fixed in recent Tcl versions.
- Updated README

2025-01-28

- Now showing Tcl/Tk version and script release date in output console
- Improved tooltips for multiple server tasks configuration
- Added tooltip to maps selection
- Now accepting uppercase layer ids theme file